# fossil-strings

./: README.md  meson.build  meson.options
code/logic/: bletter.c  bstring.c  cletter.c  cstring.c  meson.build  wletter.c  wstring.c
code/logic/fossil/: bletter.c  cletter.c  wstring.c
code/logic/fossil/string/: bletter.h  bstring.h  cletter.h  cstring.h  framework.h  wletter.h  wstring.h
code/tests/: meson.build  test_bstring.c  test_cstring.c  test_wstring.c
